--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "galbar/jsonpath",
+    "name": "infisamk/jsonpath",
     "description": "JSONPath implementation for querying and updating JSON objects",
     "type": "library",
     "keywords": ["jsonpath", "json", "path"],
